# blueleaks-explorer

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  run.sh  structure.json
src/: Dockerfile  app.py  build-structures.py  common.py  initialize.py  pyproject.toml
src/explorer/: __init__.py  common.py  import_data.py  server.py  structure.py
src/explorer/templates/: frontend.html
src/frontend/: build.js  index.html  index.js  main.js  package-lock.json  package.json  webpack.config.js
src/frontend/components/: App.vue
src/frontend/components/Pages/: Item.vue  Site.vue  Sites.vue  Structure.vue  StructureEdit.vue  Table.vue
src/frontend/components/Pages/Structure/: Field.vue  Join.vue  Table.vue
src/frontend/components/Pages/Table/: JoinCell.vue  JoinRow.vue  Paging.vue  SearchBar.vue  SortBar.vue  TableCell.vue  TableRow.vue
src/frontend/src/: App.vue  main.js
src/frontend/src/Pages/: Item.vue  Site.vue  Sites.vue  Structure.vue  StructureEdit.vue  Table.vue
src/frontend/src/Pages/Structure/: Field.vue  Join.vue  Table.vue
src/frontend/src/Pages/Table/: JoinCell.vue  JoinRow.vue  Paging.vue  SearchBar.vue  SortBar.vue  TableCell.vue  TableRow.vue
src/frontend/src/components/Pages/: Item.vue  Site.vue  Structure.vue  Table.vue
src/frontend/src/components/Pages/Structure/: Table.vue
src/frontend/src/components/Pages/Table/: SortBar.vue  TableCell.vue  (+1 more)
src/templates/: directory_listing.html  error.html  frontend.html
src/tests/: conftest.py  test_api.py  test_catchall.py  test_initialized.py
(+357 files in other folders)
