[tool.poetry]
name = "blueleaks-explorer"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
