[tool.poetry]
name = "blueleaks-explorer"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
flask = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"
